--- a/ios/Podfile
+++ b/ios/Podfile
@@ -85,6 +85,11 @@ target 'ExcuseMyFrench' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
 
+
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
   target 'ExcuseMyFrenchTests' do
     inherit! :complete
     # Pods for testing
