--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
     "react-native-audio-recorder-player": "^2.6.2",
+    "react-native-device-info": "^8.4.8",
+    "react-native-modal": "^13.0.0",
     "react-native-pulse": "^1.0.7",
     "react-native-sound": "^0.11.0",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "rn-fetch-blob": "^0.12.0",
+    "sp-react-native-in-app-updates": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
