--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-native-audio-recorder-player": "^2.6.2",
     "react-native-device-info": "^8.4.8",
     "react-native-modal": "^13.0.0",
+    "react-native-navbar-color": "^1.0.3",
     "react-native-pulse": "^1.0.7",
     "react-native-sound": "^0.11.0",
     "react-native-svg": "^12.1.0",
+    "react-native-system-navigation-bar": "^1.0.2",
     "rn-fetch-blob": "^0.12.0",
     "sp-react-native-in-app-updates": "^1.1.3"
   },
