In app review update

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -90,6 +90,8 @@ target 'ExcuseMyFrench' do
 
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
 
+  pod 'react-native-in-app-review', :path => '../node_modules/react-native-in-app-review'
+
   target 'ExcuseMyFrenchTests' do
     inherit! :complete
     # Pods for testing
