--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-audio-recorder-player": "^2.6.2",
     "react-native-device-info": "^8.4.8",
+    "react-native-in-app-review": "^3.3.2",
     "react-native-modal": "^13.0.0",
     "react-native-navbar-color": "^1.0.3",
     "react-native-pulse": "^1.0.7",
